refactor(chat): 移除公共模式
